remove pagination for team members
