# ifib/api/specification/openapi.yaml
@@ -85,17 +85,6 @@ paths:
     get:
       tags:
         - home
-      parameters:
-        - name: pageSize
-          in: query
-          schema:
-            default: 4
-            type: integer
-        - name: pageNumber
-          in: query
-          schema:
-            default: 1
-            type: integer
       responses:
         '200':
           description: successful operation
