# ifib/api/team_members/serializers.py
@@ -4,11 +4,6 @@ from ifib.api.serializers import BasePaginationSerializer
 from ifib.models import TeamMember
 
 
-class TeamMembersRequestSerializer(serializers.Serializer):
-    page_size = serializers.IntegerField(min_value=1, default=4)
-    page_number = serializers.IntegerField(min_value=1, default=1)
-
-
 class TeamMembersSerializer(serializers.ModelSerializer):
 
     class Meta:
@@ -19,7 +14,3 @@ class TeamMembersSerializer(serializers.ModelSerializer):
         representation = super().to_representation(instance)
         representation["imageUrl"] = representation.pop("image")
         return representation
-
-
-class TeamMembersSerializerResponse(BasePaginationSerializer):
-    items = TeamMembersSerializer(many=True)
